--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-    <section class="contanier">
-        <article>
+    <section id="contanier">
+        <article id="conteudo">
             
-        </article class="conteudo">
+        </article >
     </section>
     
 </body>
