--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -29,7 +29,7 @@
 
   
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -64,7 +64,7 @@
 
     
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/chrystophermedeiros" target="_blank">Chrystopher Medeiros</a> no curso <a href="https://www.cursoemvideo.com" target="_blank">curso em video</a></p>
+        <p>Site criado por <a href="https://github.com/chrystophermedeiros" target="_blank">Chrystopher Medeiros</a> no curso para <a href="https://www.cursoemvideo.com" target="_blank">curso em video</a></p>
     </footer>
     
 </body>
